<resources>
    <string name="app_name">Atividade1</string>
    <string name="posts">Coleção Posts</string>
    <string name="comments">Coleção Comments</string>
    <string name="albums">Coleção Albums</string>
    <string name="users">Coleção Users</string>
    <string name="recycler">Coleção RecyclerView</string>
    <string name="tituloRecycler">Mostrar detalhes em RecyclerView:</string>
    <string name="tituloPosts">POSTS:</string>
    <string name="tituloComments">COMMENTS:</string>
    <string name="tituloAlbums">ALBUMS:</string>
    <string name="tituloUsers">USERS:</string>

</resources>